[package]
name = "record-audio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
cpal = "0.13.5"
ctrlc = "3.2.2"
color-eyre = "0.6.1"
chrono = "0.4.19"
hound = "3.4.0"
symphonia = {version = "0.5.0", features = ["isomp4", "mp3", "aac"] }
log = "0.4.17"
dasp = { version = "0.11.0", features = ["signal", "interpolate", "interpolate-linear"] }